--- a/src/main/resources/templates/dietician/orders.html
+++ b/src/main/resources/templates/dietician/orders.html
@@ -7,11 +7,15 @@
     <link href="../../lib/font-awesome/css/font-awesome.css" rel="stylesheet"/>
     <link href="../../css/dietician/style.css" rel="stylesheet">
     <style>
+        .wrapper {
+            padding: 0 400px;
+        }
 
         .button-p {
             padding: 20px 50px;
             border: 1px solid black;
             color: black;
+            text-align: center;
         }
 
         .button-p:hover {
@@ -21,15 +25,16 @@
 
         .order-list {
             box-shadow: black 0 0 2px 1px;
-            width: 1000px;
-            min-height: 350px;
-            margin: 50px auto;
-            padding: 10px;
+            width: 300px;
+            min-height: 200px;
+            margin: 50px 50px 0 50px;
+            padding-top: 20px;
+            float: left;
         }
 
         .order-list p {
             font-size: 15px;
-            padding: 0 0 0 15px;
+            padding: 0 15px;
             color: black;
             margin: 0;
             font-weight: bold;
@@ -38,23 +43,6 @@
         .order-list span {
             font-weight: normal;
             font-size: 14px;
-        }
-
-        .order-left-col,
-        .order-mid-col,
-        .order-right-col {
-            width: 25%;
-            padding: 10px;
-            float: left;
-        }
-
-        .order-mid-col {
-            float: left;
-        }
-
-        .order-right-col {
-            float: right;
-            width: 50%;
         }
     </style>
 </head>
@@ -88,42 +76,21 @@
     <section id="main-content">
         <div class="wrapper">
             <div class="order-list" th:each="order : ${orderList}" th:object="${order}">
-                <div class="order-left-col">
-                    <p>Imię i nazwisko: <span th:text="*{getName()}"></span></p>
+                    <p>Aktywność: <span th:text="*{getActivity()}" style="float: right"></span></p>
                     <br/>
-                    <p>Adres email: <span th:text="*{getEaddress()}"></span></p>
+                    <p>Cel diety: <span th:text="*{getDietWish()}" style="float: right"></span></p>
                     <br/>
-                    <p>Telefon: <span th:text="*{getPhone()}"></span></p>
+                    <p>Ilość posiłków: <span th:text="*{getDishCount()}" style="float: right"></span></p>
                     <br/>
-                    <p>Ulica: <span th:text="*{getStreet()}"></span></p>
+                    <p>Status: <span th:text="*{getStatus()}" style="float: right"></span></p>
                     <br/>
-                    <p>Adres: <span th:text="*{getZip()}+' '+*{getCity()}"></span></p>
-                    <br/>
-                    <p>Wiek: <span th:text="*{getAge()}"></span></p>
-                    <br/>
-                    <p>Wzrost: <span th:text="*{getHeight()}"></span></p>
-                    <br/>
-                    <p>Status: <span th:text="*{getStatus()}"></span></p>
-                </div>
-                <div class="order-mid-col">
-                    <p>Aktywność: <span th:text="*{getActivity()}"></span></p>
-                    <br/>
-                    <p>Cel diety: <span th:text="*{getDietWish()}"></span></p>
-                    <br/>
-                    <p>Ilość posiłków: <span th:text="*{getDishCount()}"></span></p>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <a class="button-p" th:href="'/admin/order?orderId='+*{getOrderId()}">
-                        <span >Przejdź</span>
-                    </a>
-                </div>
-                <div class="order-right-col">
                     <p>Uwagi:</p>
                     <p style="width: 100%;height: 200px;word-break: break-all; font-size: 12px" th:text="*{getComment()}"></p>
-                    <br/>
-                </div>
+                    <div style="height: 60px">
+                        <a class="button-p" th:href="'/admin/order?orderId='+*{getOrderId()}" style="margin: 0 75px;">
+                            <span>Przejdź</span>
+                        </a>
+                    </div>
             </div>
         </div>
     </section>
