--- a/src/main/resources/templates/client/showDiet.html
+++ b/src/main/resources/templates/client/showDiet.html
@@ -287,7 +287,7 @@
 <header class="u-clearfix u-header u-header" id="sec-7e0c">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="/hello" class="u-image u-logo u-image-1" style="margin-right: 0;width: 300px;">
-            <img src="../img/good_logo_black_trans.png" class="u-logo-image u-logo-image-1">
+            <img style="width: 400px" src="../img/good_logo_black_trans.png" class="u-logo-image u-logo-image-1" alt="logo">
         </a>
         <a href="/find" class="back-button u-menu u-menu-dropdown u-offcanvas u-menu-1" style="margin-bottom: 0;">
             Powrót
@@ -300,15 +300,15 @@
         <h1 class="u-custom-font u-text u-text-default u-text-1" style="margin-top:0;">Twoje Menu</h1>
         <p class="u-text u-text-2">Skomponowane specjalnie dla Ciebie tak, abyś poświęcił jak najmniej czasu do
             przygotowania posiłków i najadł się do syta ze smakiem.</p>
-        <div class="u-list u-repeater u-list-1" th:each="dish : ${dishList}" th:object="${dish}">
+        <div class="u-list u-repeater u-list-1" th:each="dish : ${dishList}">
             <div class="u-align-right u-container-style u-image u-list-item u-repeater-item u-shading u-video-cover u-image-1"
-                    th:style="'background-image: url('+*{getPhoto()}+')'" data-image-width="996" data-image-height="389">
+                    th:style="'background-image: url('+${dish.getPhoto()}+')'" data-image-width="996" data-image-height="389">
                 <div class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
                     <div class="u-align-center u-black u-container-style u-group u-opacity u-opacity-35 u-video-cover u-group-1">
                         <div class="u-container-layout u-valign-middle u-container-layout-2">
-                            <h4 class="u-text u-text-default u-text-3" th:text="*{getName()}"></h4>
+                            <h4 class="u-text u-text-default u-text-3" th:text="${dish.getName()}"></h4>
                             <h6 class="u-text u-text-default u-text-palette-3-base u-text-4">_____</h6>
-                            <a th:href="'/show-dish?dishId='+*{getDishId()}+'&token='+${token}"
+                            <a th:href="'/show-dish?dishId='+${dish.getDishId()}+'&token='+${token}"
                                class="u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-1">Zobacz przepis</a>
                         </div>
                     </div>
