--- a/src/main/resources/templates/client/showDish.html
+++ b/src/main/resources/templates/client/showDish.html
@@ -311,11 +311,17 @@
                                     <div class="u-align-right u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-left-cell u-size-20-lg u-size-20-md u-size-20-sm u-size-20-xs u-size-21-xl u-layout-cell-2">
                                         <div class="u-container-layout u-valign-top u-container-layout-2">
                                             <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
+                                            <br/>
+                                            <br/>
+                                            <span style="text-align: left; font-size: 13px;" th:each="ingredientDescription : ${ingredientDescriptionList}" th:text="${ingredientDescription}" ></span>
+                                            <br/>
+                                            <br/>
+                                            <span style="text-align: left;" th:each="caloriesDescription : ${caloriesDescriptionList}" th:text="${caloriesDescription}"></span>
                                         </div>
                                     </div>
                                     <div class="u-container-style u-layout-cell u-size-39-xl u-size-40-lg u-size-40-md u-size-40-sm u-size-40-xs u-layout-cell-3">
                                         <div class="u-container-layout u-valign-top u-container-layout-3">
-                                            <p class="u-text u-text-3" th:text="*{getRecipe().getDescription()}">
+                                            <p class="u-text u-text-3" th:text="*{getRecipe().getDescription()}" style="text-align: justify; text-indent: 50px">
                                                 <br>
                                                 <br>
                                             </p>
