--- a/src/main/resources/templates/dietician/addRecipe.html
+++ b/src/main/resources/templates/dietician/addRecipe.html
@@ -181,22 +181,6 @@
                             </div>
                         </div>
 
-<!--                        <div class="contact-item" style="height: 66px">-->
-<!--                            <div class="item" style="float:left; width: 45%;">-->
-<!--                                <p>Dodaj składnik</p>-->
-<!--                                <select>-->
-<!--                                    <option value=""></option>-->
-<!--                                    <option value="1">Makaron</option>-->
-<!--                                    <option value="2">Ryż</option>-->
-<!--                                    <option value="3">Pomidor</option>-->
-<!--                                </select>-->
-<!--                            </div>-->
-<!--                            <div class="item" style="float:right; width: 45%;">-->
-<!--                                <p>Proporcja</p>-->
-<!--                                <input type="number" name="proportion" value="1.0" min="0.1" max="100.0" step="0.1"/>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
                         <div class="item">
                             <p>Dodaj składniki:</p>
                             <p style="font-size: 11px">(makroskładniki w przypadku 100g, 1 proporcja = 100g składnika)</p>
@@ -215,7 +199,7 @@
                         </div>
 
                         <div class="btn-block">
-                            <button type="submit">DODAJ</button>
+                            <button id="add-recipe-btn" onClick="alert('Dodano przepis do bazy danych!')" type="submit">DODAJ</button>
                         </div>
                     </form>
                 </div>
