--- a/src/main/resources/templates/dietician/addRecipe.html
+++ b/src/main/resources/templates/dietician/addRecipe.html
@@ -162,7 +162,7 @@
                             <input type="text" name="name" maxlength="100" required/>
                         </div>
                         <div class="item">
-                            <p>Photo</p>
+                            <p>Link do zdjęcia</p>
                             <input type="text" name="photo" maxlength="500" required/>
                         </div>
                         <div class="contact-item">
